--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a:hover {
 
 .bgAyuda {
   color: white;
-  background-image: url(../img/fondo_ayuda.png);
+  background-image: url(../img/fondo_ayuda.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover; }
