--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a:hover {
 .carousel-item .col-md,
 .carousel-item .col-lg {
   margin: 8px;
-  height: 200px;
+  height: auto;
   background-size: cover;
   background-position: center center; }
   @media only screen and (max-width: 640px) {
