--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,6 @@ a:hover {
   @media only screen and (max-width: 640px) {
     .pad-10 {
       padding: 0; } }
+
+.carousel-indicators {
+  bottom: -15px; }
