--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,7 @@ a:hover {
 
 .carousel-indicators {
   bottom: -15px; }
+
+@media only screen and (max-width: 640px) {
+  .promovido {
+    display: none; } }
